# ling

./: README.md  pyproject.toml
docs/plans/: 2026-03-28-agent-t-design.md  2026-03-28-agent-t-impl.md
ling/: config.py  log.py  main.py  output_parser.py  pty_manager.py  translator.py  tui.py
t/: config.py  main.py  queue.py  translator.py  tui.py
tests/: test_config.py  test_output_parser.py  test_queue.py  test_translator.py
