[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ling"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "prompt-toolkit>=3.0",
    "ptyprocess>=0.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
ling = "ling.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["ling"]
